kubernetes/apps/auth/authelia/dragonfly/netpol-obs.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.0/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-observability
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: monitoring
              app.kubernetes.io/instance: vmetrics
              app.kubernetes.io/name: vmsingle
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: dragonfly-operator
              app.kubernetes.io/name: dragonfly-operator
      ports:
        - port: 9999
          protocol: TCP
  podSelector:
    matchLabels:
      app: dragonfly-auth
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
