kubernetes/apps/auth/authelia/dragonfly/netpol-redis-same-ns.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.0/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-auth-override
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
      ports:
        - port: 6379
          protocol: TCP
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              control-plane: controller-manager
        - podSelector:
            matchLabels:
              app: dragonfly-auth
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - port: 9999
          protocol: TCP
  podSelector:
    matchLabels:
      app: dragonfly-auth
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
